--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<html>
-<h1> HEJ</h1>
+<html ng-app="app">
+
+<head>
+</head>
+
+<body>
+    <div ng-controller="testcontroller">
+        <h1> {{title}}</h1>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.js"></script>
+    <script src="/assets/app.js"></script>
+</body>
 
 </html>
