--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="app">
 
 <head>
-    <link rel="stylesheet" href="/assets/site.css" />
+    <link rel="stylesheet" href="assets/site.css" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
@@ -35,7 +35,7 @@
                         <button class="btn" ng-click="wordImageTest.showPart=2">Starta!</button>
                     </section>
                     <section ng-show="wordImageTest.showPart===2">       
-                        <img height="100px" class="img-responsive" src="{{IPpath + currentImage.Image}}" />
+                        <img class="img-responsive" src="{{IPpath + currentImage.Image}}" />
                         <input type="text" ng-model="wordImageTest.replies[currentImage.index].Word">
                         <button class="btn" ng-click="setNextImage()">Svara</button>
                         
@@ -103,7 +103,7 @@
 
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.js"></script>
-    <script src="/assets/app.js"></script>
+    <script src="assets/app.js"></script>
 </body>
 
 </html>
