--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <div class="currentImg" style='background-image:url("{{IPpath + currentImage.Image}}")' ></div>
                              </div>
                         
-                            <input class="xs-col-9" type="text" ng-model="wordImageTest.replies[currentImage.index].Word" autofocus />
+                            <input class="xs-col-9" type="text" ng-enter="setNextImage()" ng-model="wordImageTest.replies[currentImage.index].Word" autofocus />
                         <button class="btn" ng-click="setNextImage()">Svara</button>
                         
                     </section>
