--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         </main>
 
     </div>
+    <script src="/assets/jquery-3.1.1.min.js"></script>
     <script src="/assets/angular.js"></script>
     <!--<script src="/assets/angular-resource.js"></script>-->
     <script src="/app/main.js"></script>
