--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+    <script src="/assets/jquery-3.1.1.min.js"></script>
+    <script src="/assets/angular.js"></script>
+    <!--<script src="/assets/angular-resource.js"></script>-->
+    <script src="/app/main.js"></script>
+    <script src="/app/directives.js"></script>
 </head>
 
 <body>
@@ -44,9 +49,9 @@
                         <button class="btn" ng-click="setNextImage()">Svara</button>
                         
                     </section>
-                    <section ng-show="wordImageTest.showPart===3" class="results">
+                    <section ng-show="wordImageTest.showPart === 3" class="results">
                         <section ng-repeat="image in Images">
-                            <img width="30px" src="{{IPpath + image.Image}}" />
+                            <img width="30px" ng-src="{{IPpath + image.Image}}" />
                             <span ng-hide="wordImageTest.response[$index]" class="wrong xs-col-10" ng-bind="wordImageTest.replies[$index].Word"></span>
                 <span ng-show="wordImageTest.response[$index]" class="right xs-col-10" ng-bind="wordImageTest.replies[$index].Word">Rätt</span>
             </section>
@@ -84,7 +89,7 @@
                         <div ng-bind="currentColor.text"></div>
                         <div class="swatch-container" ng-repeat="swatch in colorTest.alternatives">
                             <div class="swatch-wrapper col-xs-3 col-md-2">
-                                <div id="swatch{{$index}}" class="swatch" ng-click="selectSwatch($index)" style="background-color:{{swatch.hex}}">
+                                <div id="swatch{{$index}}" class="swatch" ng-click="selectSwatch($index)" style="background-color:{{swatch.Hex}}">
                                 </div>
                             </div>
                         </div> 
@@ -134,11 +139,6 @@
         </main>
 
     </div>
-    <script src="/assets/jquery-3.1.1.min.js"></script>
-    <script src="/assets/angular.js"></script>
-    <!--<script src="/assets/angular-resource.js"></script>-->
-    <script src="/app/main.js"></script>
-    <script src="/app/directives.js"></script>
 </body>
 
 </html>
